--- a/index.html
+++ b/index.html
@@ -147,7 +147,7 @@
         </div>
     </div>
     <div class="skill">
-        <p>JavaScript</p>
+        <p>css</p>
         <div class="progress-bar">
             <div class="progress" data-progress="70"></div>
         </div>
