--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                 <a href="project1_css.html" class="btn">Know More</a>
             </div>
             <div class="project-thumbnail">
-                <img src="k.JPG" alt="project 1">
+                <img src="k.jpg" alt="project 2">
                 <h3> Book Shop Management </h3>
                 <p>Bookstore inventory and sales management</p>
                 <a href="project2.html" class="btn">Know More</a>
