--- a/index.html
+++ b/index.html
@@ -265,7 +265,7 @@ box-shadow: 7px 2px 15px 4px #320568ec;">
 </section> <br>
 
 <footer>
-    <a href="resume.pdf" download="Nishanth_U_Resume.pdf" 
+    <a href="Nishanth.pdf" download="Nishanth_U_Resume.pdf" 
     style="font-size: 20px; text-decoration: none; color: #fbfbfb; font-weight: bold; cursor: pointer; text-align: left; 
            transition: font-size 0.3s ease-in-out, color 0.3s ease-in-out;"
     onmouseover="this.style.fontSize='22px'; this.style.color='black'" 
